--- a/servidor/pom.xml
+++ b/servidor/pom.xml
@@ -10,4 +10,14 @@
         <maven.compiler.release>23</maven.compiler.release>
         <exec.mainClass>com.mycompany.servidor.Main</exec.mainClass>
     </properties>
+    	
+    <dependencies>
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.2.27</version>
+    </dependency>
+</dependencies>
+    
+    
 </project>
